# lightning-ecommerce

./: .gitignore  Cargo.toml  LICENSE  README.md  _config.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
_posts/: 2026-05-13-lightning-commerce.md
examples/nextjs-unlock/: .env.local.example  .gitignore  README.md  package.json  tsconfig.json
examples/nextjs-unlock/app/: layout.tsx  page.tsx
examples/nextjs-unlock/app/api/lightning/[...route]/: route.ts
lsp-service/: Cargo.toml
lsp-service/src/: main.rs
node-service/: Cargo.toml
node-service/src/: config.rs  db.rs  entropy.rs  event_loop.rs  invoice.rs  main.rs  node.rs  types.rs
node-service/src/api/: mod.rs
payer-cli/: Cargo.toml
payer-cli/src/: main.rs
