[package]
name = "node-service"
version = "0.1.0"
edition = "2024"

[dependencies]
ldk-node = { default-features = false, git = "https://github.com/lightningdevkit/ldk-node.git", rev = "53268f2e0b530f90f2c548f9c7f01695cf14c7e0" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
chacha20poly1305 = "0.10"
sha2 = "0.10"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }